# job-board-mcp

./: .gitignore  Cargo.toml  PLAN.md  PLAN_ARCHIVE.md  README.md  SPEC.md  build.rs  clippy.toml  config.example.toml
.githooks/: pre-push
.github/workflows/: ci.yml  live-smoke.yml
docs/: USAGE.md  failure-modes.md
migrations/: 0001_initial.sql  0002_raw_captures.sql  0003_postings_equity.sql
src/: clock.rs  config.rs  http.rs  lib.rs  main.rs  server.rs  store.rs
src/adapter/: ashby.rs  github_careers.rs  greenhouse.rs  lever.rs  mod.rs  parse.rs  rippling.rs  smartrecruiters.rs  workable.rs  workday.rs
src/adapter/fixtures/: ashby_jobs.json  github_careers_jobs.json  greenhouse_detail.json  greenhouse_jobs.json  lever_postings.json  rippling_jobs.json  rippling_next_data.json  smartrecruiters_postings.json  workable_jobs.json  workday_detail.json  workday_jobs.json
src/model/: comp.rs  enums.rs  equity.rs  ids.rs  mod.rs  posting.rs
tests/: diff_semantics.rs  e2e.rs  live_smoke.rs
