[package]
name = "job-board-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "MCP server exposing typed, deterministic job-board tools: fetch, normalize, snapshot and diff postings from hosted ATS APIs."
repository = "https://github.com/chotchki/job-board-mcp"
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["mcp", "ats", "job-board", "scraping"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
anyhow = "1"
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints.rust]
unsafe_code = "forbid"

[dev-dependencies]
rmcp = { version = "2.2.0", features = ["client", "transport-child-process"] }
tokio = { version = "1", features = ["full"] }
