[package]
name = "job-board-mcp"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "MCP server exposing typed, deterministic job-board tools: fetch, normalize, snapshot and diff postings from hosted ATS APIs."
repository = "https://github.com/chotchki/job-board-mcp"
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["mcp", "ats", "job-board", "scraping"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde", "std"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"] }
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "time", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Suppressions carry a WHY, and #[expect] beats #[allow] because it rots loudly
# (unfulfilled_lint_expectations) instead of silently.
# `reason = "..."` is NOT accepted inside this table — cargo warns "unused manifest
# key" and drops it. Reasons live in the source #[expect(..., reason = "...")].
allow_attributes_without_reason = "deny"
allow_attributes = "warn"

[dev-dependencies]
rmcp = { version = "2.2.0", features = ["client", "transport-child-process"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
wiremock = "0.6.5"

[build-dependencies]
anyhow = "1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "migrate", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
